# cmake-font-awesome-download

./: .editorconfig  .gitignore  .travis.yml  README.md
cmake/: FontAwesome5Download.cmake
test/: CMakeLists.txt
test/font_awesome5_desktop_download/: CMakeLists.txt
test/font_awesome5_web_download/: CMakeLists.txt
